# crawl

./: .gitignore  Cargo.toml
assets/: rltiles
crates/dcss_core/: Cargo.toml
crates/dcss_core/src/: chargen.rs  combat.rs  fov.rs  item.rs  level.rs  lib.rs  message.rs  monster.rs  pathfind.rs  player.rs  save.rs  terrain.rs  tests.rs  turn.rs  types.rs
crates/dcss_core/src/enums/: feature_type.rs  mod.rs  monster_type.rs
crates/dcss_game/: Cargo.toml
crates/dcss_game/src/: lib.rs
crates/dcss_lua/: Cargo.toml
crates/dcss_lua/src/: des_parser.rs  lib.rs  lua_state.rs  subst.rs  tests.rs
crates/dcss_tiles/: Cargo.toml
crates/dcss_tiles/src/: lib.rs
crates/dcss_ui/: Cargo.toml
crates/dcss_ui/content/: _app.md  chargen.md  death_screen.md  help_screen.md  inventory.md  message_log.md  monster_info.md  stat_panel.md
crates/dcss_ui/src/: chargen_screen.rs  examine.rs  inventory_screen.rs  lib.rs  message_panel.rs  stat_panel.rs
examples/: screenshot_test.rs
knowledge/: README.md
knowledge/architecture/: actor-trait-design.md  adr-001-ecs-design.md  engine-content-middleware.md  global-state-graph.md  turn-loop.md
knowledge/data-pipeline/: asset-inventory.md
knowledge/lua-integration/: api-surface.md  des-file-format.md  mlua-poc.md  parser-internals.md  parser-port.md
knowledge/prototypes/: litui-display-only-proposal.md  litui-dynamic-data-proposal.md  litui-integration-issues.md  litui-integration.md  litui-stat-panel-proposal.md  medium-term-plan.md  mvp-findings.md
knowledge/subsystems/: combat-system.md
knowledge/translation-patterns/: enum-catalog.md
knowledge/ui-mapping/: screen-catalog.md
src/: main.rs  plugin.rs
tests/: screenshot_test.rs
