[package]
name = "dcss_game"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
dcss_core = { path = "../dcss_core" }
dcss_tiles = { path = "../dcss_tiles" }
dcss_ui = { path = "../dcss_ui" }
dcss_lua = { path = "../dcss_lua" }
bevy = { workspace = true, features = [
    "bevy_sprite", "bevy_sprite_render", "bevy_state", "bevy_image",
] }
bevy_egui.workspace = true
egui.workspace = true
serde_yaml.workspace = true
rand.workspace = true
