[package]
name = "dcss_ui"
edition = "2024"
rust-version = "1.92"
version = "0.1.0"

[dependencies]
dcss_core = { path = "../dcss_core" }
bevy = { version = "0.18", default-features = false, features = ["bevy_render"] }
bevy_egui = "0.39"
egui = "0.33"
litui = { path = "/Users/FrankKorf/Playspaces/egui-md-macro/crates/litui" }
bevy_ecs = "0.18"
