[package]
name = "dcss_ui"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
dcss_core = { path = "../dcss_core" }
bevy = { workspace = true, features = ["bevy_render"] }
bevy_egui.workspace = true
bevy_ecs.workspace = true
egui.workspace = true
litui.workspace = true
